Update list display to flex

--- a/index.html
+++ b/index.html
@@ -22,141 +22,66 @@
         </nav>
         <section class="content">
             <h2 class="content-title">Most Recent</h2>
-            <input id="article1" type="checkbox" name="more" class="article-visible" />
+            <ul class="article-list">
+                <li class="article-item">
+                    <label for="article1" class="article-label"></label>
+                    <input id="article1" type="checkbox" name="more" class="article-visible" />
+                    <article class="article">
+                        <div class="article-header">
+                            <h4 class="article-title">Aenean rhoncus</h4>
+                            <time class="article-year">2014</time>
+                        </div>
+                        <img class="article-picture" src="http://placehold.it/300x450">
+                        <p class="article-synopsis">
+                            Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
+                        </p>
+                    </article>
+                </li>
+                <li class="article-item">
+                    <label for="article2" class="article-label"></label>
+                    <input id="article2" type="checkbox" name="more" class="article-visible" />
+                    <article class="article">
+                        <div class="article-header">
+                            <h4 class="article-title">Aenean rhoncus</h4>
+                            <time class="article-year">2014</time>
+                        </div>
+                        <img class="article-picture" src="http://placehold.it/300x450">
+                        <p class="article-synopsis">
+                            Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
+                        </p>
+                    </article>
+                </li>
+                <li class="article-item">
+                    <label for="article3" class="article-label"></label>
+                    <input id="article3" type="checkbox" name="more" class="article-visible" />
+                    <article class="article">
+                        <div class="article-header">
+                            <h4 class="article-title">Aenean rhoncus</h4>
+                            <time class="article-year">2014</time>
+                        </div>
+                        <img class="article-picture" src="http://placehold.it/300x450">
+                        <p class="article-synopsis">
+                            Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
+                        </p>
+                    </article>
+                </li>
+            </ul>
+            <input id="articlef" type="checkbox" name="more" class="article-visible" />
             <article class="article">
-                <figure class="poster">
-                   <figcaption>
-                       <h3 class="article-title">Aenean rhoncus turpis quis nunc sollicitudin varius</h3>
-                   </figcaption>
-                    <img src="http://placehold.it/300x450">
-                </figure>
-                <p>
-                    Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article1" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article2" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Nam ut ante vitae elit tempus auctor ac sit amet tortor</h3>
+                <h4 class="article-title">Nam ut ante vitae elit tempus auctor ac sit amet tortor</h4>
                 <p>
                     Praesent posuere, justo non mollis lacinia, quam eros rutrum erat, in tempor dolor neque vitae lorem. Nulla eleifend augue a velit volutpat facilisis. Suspendisse laoreet convallis massa, tincidunt sagittis nisl interdum et. Mauris et tortor massa. Quisque fringilla eleifend eros, ac iaculis ligula placerat non. Fusce leo quam, iaculis at ultrices nec, commodo ac nisi. Nam tincidunt nulla nunc, quis rutrum eros placerat in.
                 </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article2" class="button">
-                    <span>Read More</span>
+                                <label for="article2" class="button">
                 </label>
             </article>
-            <input id="article3" type="checkbox" name="more" class="article-visible" />
+            <input id="articleq" type="checkbox" name="more" class="article-visible" />
             <article class="article">
-                <h3 class="article-title">Phasellus dapibus elit ut nibh faucibus tincidunt</h3>
+                <h4 class="article-title">Phasellus dapibus elit ut nibh faucibus tincidunt</h4>
                 <p>
                     Aliquam ligula massa, sodales a nisl vel, convallis venenatis quam. Vivamus egestas elementum arcu et congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam sit amet volutpat libero. Curabitur pulvinar libero arcu, sed pretium quam semper non. Sed eget mauris eros. Etiam nec venenatis sapien.
                 </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article3" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article4" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article4" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article5" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article5" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article6" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article6" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article7" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article7" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article8" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article8" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article9" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article9" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article10" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article10" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article11" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article11" class="button">
-                    <span>Read More</span>
-                </label>
-            </article>
-            <input id="article12" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h3 class="article-title">Morbi nec magna dictum, sagittis nisi et, sagittis nisi</h3>
-                <p>
-                    Sed luctus lacus in bibendum aliquam. Fusce finibus vehicula laoreet. Sed placerat dolor ut posuere euismod. Suspendisse tincidunt metus a nulla dignissim, vitae egestas magna semper. Maecenas bibendum sit amet nibh a porta. Nunc hendrerit cursus justo, vitae consectetur sem dapibus eget. Pellentesque pulvinar tortor sit amet rhoncus varius. Suspendisse volutpat arcu ac lacus bibendum, ut convallis metus pharetra.
-                </p>
-                <time>24-02-2015 16:45</time>
-                <label for="article12" class="button">
-                    <span>Read More</span>
+                                <label for="article3" class="button">
                 </label>
             </article>
         </section>
