Fully functional items using flexboxes. Added bower

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/style.css" />
+    <script type="application/javascript" src="bower_components/prefixfree/prefixfree.min.js"></script>
     <title>Kerbal Assembly Website</title>
 </head>
 <body>
@@ -22,13 +23,13 @@
         </nav>
         <section class="content">
             <h2 class="content-title">Most Recent</h2>
-            <ul class="article-list">
-                <li class="article-item">
+            <div class="article-list">
+                <input id="article1" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <div class="article-item">
                     <label for="article1" class="article-label"></label>
-                    <input id="article1" type="checkbox" name="more" class="article-visible" />
                     <article class="article">
                         <div class="article-header">
-                            <h4 class="article-title">Aenean rhoncus</h4>
+                            <h4 class="article-title">Aenean rhoncus kjqzd khqzd kjqzhd kjqzhd </h4>
                             <time class="article-year">2014</time>
                         </div>
                         <img class="article-picture" src="http://placehold.it/300x450">
@@ -36,10 +37,10 @@
                             Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
                         </p>
                     </article>
-                </li>
-                <li class="article-item">
+                </div>
+                <input id="article2" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <div class="article-item">
                     <label for="article2" class="article-label"></label>
-                    <input id="article2" type="checkbox" name="more" class="article-visible" />
                     <article class="article">
                         <div class="article-header">
                             <h4 class="article-title">Aenean rhoncus</h4>
@@ -50,10 +51,10 @@
                             Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
                         </p>
                     </article>
-                </li>
-                <li class="article-item">
+                </div>
+                <input id="article3" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <div class="article-item">
                     <label for="article3" class="article-label"></label>
-                    <input id="article3" type="checkbox" name="more" class="article-visible" />
                     <article class="article">
                         <div class="article-header">
                             <h4 class="article-title">Aenean rhoncus</h4>
@@ -64,26 +65,8 @@
                             Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
                         </p>
                     </article>
-                </li>
-            </ul>
-            <input id="articlef" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h4 class="article-title">Nam ut ante vitae elit tempus auctor ac sit amet tortor</h4>
-                <p>
-                    Praesent posuere, justo non mollis lacinia, quam eros rutrum erat, in tempor dolor neque vitae lorem. Nulla eleifend augue a velit volutpat facilisis. Suspendisse laoreet convallis massa, tincidunt sagittis nisl interdum et. Mauris et tortor massa. Quisque fringilla eleifend eros, ac iaculis ligula placerat non. Fusce leo quam, iaculis at ultrices nec, commodo ac nisi. Nam tincidunt nulla nunc, quis rutrum eros placerat in.
-                </p>
-                                <label for="article2" class="button">
-                </label>
-            </article>
-            <input id="articleq" type="checkbox" name="more" class="article-visible" />
-            <article class="article">
-                <h4 class="article-title">Phasellus dapibus elit ut nibh faucibus tincidunt</h4>
-                <p>
-                    Aliquam ligula massa, sodales a nisl vel, convallis venenatis quam. Vivamus egestas elementum arcu et congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam sit amet volutpat libero. Curabitur pulvinar libero arcu, sed pretium quam semper non. Sed eget mauris eros. Etiam nec venenatis sapien.
-                </p>
-                                <label for="article3" class="button">
-                </label>
-            </article>
+                </div>
+            </div>
         </section>
         <section class="aside">
             <article class="menu">
