Updated nav to flexbox semantic.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
         <h1>Kerbal Assembly Website</h1>
     </header>
     <main>
-        <nav>
-            <ul class="nav">
-                <li><a class="button-link" href="#">Home</a></li>
-                <li><a class="button-link" href="#">Recent</a></li>
-                <li><a class="button-link" href="#">Top Trends</a></li>
-                <li><a class="button-link" href="#">Categories</a></li>
-                <li class="right"><a class="button button-link" href="#">Log In</a></li>
-                <li class="right"><a class="button button-link" href="#">Sign Up</a></li>
+        <nav class="nav-container">
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Recent</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Top Trends</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Categories</a>
+                </li>
+            </ul>
+            <ul class="nav-list">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-mod" href="#">Sign Up</a>
+                </li>
             </ul>
         </nav>
         <section class="content">
