--- a/static/index.html
+++ b/static/index.html
@@ -5,11 +5,11 @@
     <link type='text/css' rel="stylesheet" href="styles/style.css" />
     <script type="application/javascript" src="bower_components/prefixfree/prefixfree.min.js"></script>
     <link type='text/css' rel="stylesheet" href="bower_components/typicons/src/font/typicons.css" data-noprefix/>
-    <title>Kerbal Assembly Website</title>
+    <title>Magnet manager</title>
 </head>
 <body>
     <header>
-        <h1>Kerbal Assembly Website</h1>
+        <h1>Magnet manager</h1>
     </header>
     <main>
         <input id="nav-visible" type="checkbox" class="nav-visible" autocomplete="off"/>
