--- a/static/index.new.html
+++ b/static/index.new.html
@@ -15,7 +15,7 @@
     <nav class="nav">
         <label for="nav-visible" class="nav-label">
             Menu
-            <span class="typcn typcn-arrow-sorted-up nav-dropdown-icon"></span>
+            <span class="typcn typcn-arrow-sorted-down nav-dropdown-icon"></span>
         </label>
         <ul class="nav-list">
             <li class="nav-item">
@@ -33,10 +33,10 @@
         </ul>
         <ul class="nav-list">
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign In</a>
+                <a class="nav-link link-secondary" href="#">Sign Up</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link-secondary" href="#">Sign Up</a>
+                <a class="nav-link" href="#">Sign In</a>
             </li>
         </ul>
     </nav>
@@ -44,7 +44,7 @@
         <section class="content">
             <h2 class="content-title">Most Recent</h2>
             <div class="article-list">
-                <input id="article1" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <input id="article1" type="radio" name="more" class="article-visible" autocomplete="off" />
                 <div class="article-item">
                     <label for="article1" class="article-label"></label>
                     <article class="article">
@@ -52,13 +52,16 @@
                             <h4 class="article-title">Aenean rhoncus kjqzd khqzd kjqzhd kjqzhd</h4>
                             <time class="article-year">2014</time>
                         </div>
-                        <img class="article-picture" src="http://placehold.it/300x450">
-                        <p class="article-synopsis">
-                            Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
-                        </p>
+                        <figure>
+                            <img src="images/picture.jpg" />
+                            <figcaption>
+
+                            </figcaption>
+                        </figure>
+                        <img class="article-picture" src="images/picture.jpg">
                     </article>
                 </div>
-                <input id="article2" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <input id="article2" type="radio" name="more" class="article-visible" autocomplete="off" />
                 <div class="article-item">
                     <label for="article2" class="article-label"></label>
                     <article class="article">
@@ -66,13 +69,13 @@
                             <h4 class="article-title">Aenean rhoncus</h4>
                             <time class="article-year">2014</time>
                         </div>
-                        <img class="article-picture" src="http://placehold.it/300x450">
+                        <img class="article-picture" src="images/picture.jpg">
                         <p class="article-synopsis">
                             Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
                         </p>
                     </article>
                 </div>
-                <input id="article3" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <input id="article3" type="radio" name="more" class="article-visible" autocomplete="off" />
                 <div class="article-item">
                     <label for="article3" class="article-label"></label>
                     <article class="article">
@@ -80,13 +83,13 @@
                             <h4 class="article-title">Aenean rhoncus</h4>
                             <time class="article-year">2014</time>
                         </div>
-                        <img class="article-picture" src="http://placehold.it/300x450">
+                        <img class="article-picture" src="images/picture.jpg">
                         <p class="article-synopsis">
                             Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
                         </p>
                     </article>
                 </div>
-                <input id="article4" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <input id="article4" type="radio" name="more" class="article-visible" autocomplete="off" />
                 <div class="article-item">
                     <label for="article4" class="article-label"></label>
                     <article class="article">
@@ -94,13 +97,13 @@
                             <h4 class="article-title">Aenean rhoncus</h4>
                             <time class="article-year">2014</time>
                         </div>
-                        <img class="article-picture" src="http://placehold.it/300x450">
+                        <img class="article-picture" src="images/picture.jpg">
                         <p class="article-synopsis">
                             Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
                         </p>
                     </article>
                 </div>
-                <input id="article5" type="checkbox" name="more" class="article-visible" autocomplete="off" />
+                <input id="article5" type="radio" name="more" class="article-visible" autocomplete="off" />
                 <div class="article-item">
                     <label for="article5" class="article-label"></label>
                     <article class="article">
@@ -108,7 +111,7 @@
                             <h4 class="article-title">Aenean rhoncus</h4>
                             <time class="article-year">2014</time>
                         </div>
-                        <img class="article-picture" src="http://placehold.it/300x450">
+                        <img class="article-picture" src="images/picture.jpg">
                         <p class="article-synopsis">
                             Vivamus lacus libero, venenatis ac venenatis vel, dignissim vitae nunc. Sed eu lobortis arcu. Suspendisse efficitur elementum tortor, et tristique erat rhoncus id. Quisque consequat porttitor convallis. Nullam sem ipsum, sodales nec porta at, commodo id dui. Vestibulum faucibus faucibus tellus, ut convallis nunc. Maecenas sit amet varius elit, vitae sollicitudin ex.
                         </p>
